# i18n-manager

./: .gitignore  .goreleaser.yml  CLAUDE.md  README.md  README_CN.md  build.py  go.mod  go.sum  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: build.yml  lint.yml  release.yml
cmd/i18n-manager/: main.go
internal/ai/: service.go
internal/config/: config.go
internal/manager/: manager.go
src/i18_manager/: __main__.py  ai_service.py  config.py  i18n_manager.py
src/i18_manager/lang/: message-application.properties  message-application_zh.properties  message-application_zh_TW.properties
