[project]
name = "i18_manager"
version = "0.1.0"
description = "一个强大的多语言属性文件管理工具，专为 Java 项目的国际化(i18n)设计。该工具可以帮助您轻松管理和同步 `message-application.properties` 文件中的多语言翻译。"
authors = [
    {name = "SimonGino", email = "rwjeek@gmail.com"},
]
dependencies = ["requests>=2.32.3","urllib3<2.0.0", "PyInstaller>=4.5.1"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
i18n-manager = "i18_manager.i18n_manager:main"
